[releng] add tycho configuration files (add rcptt tests)
Change-Id: I264aa9495b5e3e76d87d567675536c5cbbccdc25
Signed-off-by: Joao Barata <jean.barata@thalesgroup.com>