@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  Copyright (c) 2016 THALES GLOBAL SERVICES.
+  Copyright (c) 2016, 2017 THALES GLOBAL SERVICES.
   All rights reserved. This program and the accompanying materials
   are made available under the terms of the Eclipse Public License v1.0
   which accompanies this distribution, and is available at
@@ -9,16 +9,41 @@
   Contributors:
        Thales - initial API and implementation
 -->
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.polarsys.capella</groupId>
-    <artifactId>capella</artifactId>
-    <version>1.2.0-SNAPSHOT</version>
-    <relativePath>../../../</relativePath>
-  </parent>
-  <groupId>org.polarsys.capella</groupId>
-  <artifactId>org.polarsys.capella.test.rcptt</artifactId>
-  <packaging>eclipse-plugin</packaging>
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.polarsys.capella</groupId>
+		<artifactId>capella</artifactId>
+		<version>1.2.0-SNAPSHOT</version>
+		<relativePath>../../../</relativePath>
+	</parent>
+	<groupId>org.polarsys.capella</groupId>
+	<artifactId>org.polarsys.capella.test.rcptt</artifactId>
+	<packaging>rcpttTest</packaging>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.eclipse.rcptt</groupId>
+				<artifactId>rcptt-maven-plugin</artifactId>
+				<version>2.0.1</version>
+				<extensions>true</extensions>
+				<configuration>
+					<runner>
+						<version>2.0.2</version>
+						<vmArgs>
+							<vmArg>-Xmx1024m</vmArg>
+							<vmArg>-XX:MaxPermSize=512m</vmArg>
+						</vmArgs>
+					</runner>
+
+					<aut>
+						<explicit>../../../releng/plugins/org.polarsys.capella.rcp.product/target/products/org.polarsys.capella.rcp.product-[platform].zip</explicit>
+					</aut>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
